--- a/FirebaseExercise/Base.lproj/Main.storyboard
+++ b/FirebaseExercise/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14460.31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="yj7-0L-pBt">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14460.31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
@@ -111,41 +111,72 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <prototypes>
-                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="20" rowHeight="200" id="REQ-at-uzQ" userLabel="itemCell">
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="20" reuseIdentifier="ArticlesCell" rowHeight="200" id="REQ-at-uzQ" userLabel="itemCell" customClass="ArticlesTableViewCell" customModule="FirebaseExercise" customModuleProvider="target">
                                 <rect key="frame" x="0.0" y="28" width="375" height="200"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="REQ-at-uzQ" id="GGc-Oa-Veu">
                                     <rect key="frame" x="0.0" y="0.0" width="375" height="199.5"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                     <subviews>
-                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Title" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="n5d-FN-vUL">
-                                            <rect key="frame" x="170" y="11" width="34" height="21"/>
-                                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Title" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="n5d-FN-vUL">
+                                            <rect key="frame" x="170.5" y="11" width="34" height="21"/>
                                             <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                             <nil key="textColor"/>
                                             <nil key="highlightedColor"/>
                                         </label>
-                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Name" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="1aH-lE-VkV">
-                                            <rect key="frame" x="165" y="168" width="45" height="21"/>
-                                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" text="Content" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" preferredMaxLayoutWidth="375" translatesAutoresizingMaskIntoConstraints="NO" id="lXg-WW-Zlu">
+                                            <rect key="frame" x="0.0" y="41" width="375" height="118"/>
                                             <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                             <nil key="textColor"/>
                                             <nil key="highlightedColor"/>
                                         </label>
-                                        <button opaque="NO" contentMode="scaleAspectFit" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="twG-ex-YdO">
-                                            <rect key="frame" x="109" y="167" width="30" height="30"/>
-                                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                        <button opaque="NO" contentMode="scaleAspectFit" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="twG-ex-YdO">
+                                            <rect key="frame" x="16" y="167" width="30" height="22"/>
+                                            <color key="backgroundColor" red="1" green="0.76862745099999996" blue="0.031372549020000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                            <constraints>
+                                                <constraint firstAttribute="width" constant="30" id="3wh-Fo-zqm"/>
+                                            </constraints>
                                             <state key="normal" image="icon-heart"/>
                                         </button>
-                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Content" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="lXg-WW-Zlu">
-                                            <rect key="frame" x="156" y="89" width="62" height="21"/>
-                                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Date" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="fc6-oG-1g8">
+                                            <rect key="frame" x="269" y="168" width="90" height="21"/>
+                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                            <nil key="textColor"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Name" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="1aH-lE-VkV">
+                                            <rect key="frame" x="77" y="164" width="97" height="29"/>
                                             <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                             <nil key="textColor"/>
                                             <nil key="highlightedColor"/>
                                         </label>
                                     </subviews>
+                                    <constraints>
+                                        <constraint firstAttribute="trailing" secondItem="lXg-WW-Zlu" secondAttribute="trailing" id="0QO-d5-qvp"/>
+                                        <constraint firstItem="fc6-oG-1g8" firstAttribute="firstBaseline" secondItem="twG-ex-YdO" secondAttribute="baseline" id="CXG-38-95y"/>
+                                        <constraint firstAttribute="trailing" secondItem="lXg-WW-Zlu" secondAttribute="trailing" id="DuG-Sb-tCD"/>
+                                        <constraint firstItem="n5d-FN-vUL" firstAttribute="centerX" secondItem="lXg-WW-Zlu" secondAttribute="centerX" id="HZS-Pi-ZiR"/>
+                                        <constraint firstItem="lXg-WW-Zlu" firstAttribute="leading" secondItem="GGc-Oa-Veu" secondAttribute="leading" id="Kt0-u2-9vA"/>
+                                        <constraint firstItem="lXg-WW-Zlu" firstAttribute="top" secondItem="n5d-FN-vUL" secondAttribute="bottom" constant="9" id="OWg-X8-cJe"/>
+                                        <constraint firstItem="twG-ex-YdO" firstAttribute="bottom" secondItem="GGc-Oa-Veu" secondAttribute="bottomMargin" id="PV8-zv-mo1"/>
+                                        <constraint firstItem="1aH-lE-VkV" firstAttribute="leading" secondItem="twG-ex-YdO" secondAttribute="trailing" constant="31" id="RtA-do-bg8"/>
+                                        <constraint firstItem="fc6-oG-1g8" firstAttribute="trailing" secondItem="GGc-Oa-Veu" secondAttribute="trailingMargin" id="WdA-v7-lN7"/>
+                                        <constraint firstItem="twG-ex-YdO" firstAttribute="leading" secondItem="GGc-Oa-Veu" secondAttribute="leadingMargin" id="aqb-Tk-C3Q"/>
+                                        <constraint firstItem="lXg-WW-Zlu" firstAttribute="leading" secondItem="GGc-Oa-Veu" secondAttribute="leading" id="baZ-1N-N2G"/>
+                                        <constraint firstItem="fc6-oG-1g8" firstAttribute="leading" secondItem="1aH-lE-VkV" secondAttribute="trailing" constant="95" id="fUk-ed-MPx"/>
+                                        <constraint firstItem="1aH-lE-VkV" firstAttribute="top" secondItem="lXg-WW-Zlu" secondAttribute="bottom" constant="5" id="gGN-Gm-vcN"/>
+                                        <constraint firstAttribute="bottomMargin" secondItem="1aH-lE-VkV" secondAttribute="bottom" constant="-4" id="lQO-7S-bE0"/>
+                                        <constraint firstItem="twG-ex-YdO" firstAttribute="top" secondItem="lXg-WW-Zlu" secondAttribute="bottom" constant="8" symbolic="YES" id="nHX-UM-V82"/>
+                                        <constraint firstItem="n5d-FN-vUL" firstAttribute="centerX" secondItem="1aH-lE-VkV" secondAttribute="centerX" constant="62" id="rJ3-R8-gTa"/>
+                                        <constraint firstItem="n5d-FN-vUL" firstAttribute="top" secondItem="GGc-Oa-Veu" secondAttribute="topMargin" id="tIn-EV-v26"/>
+                                    </constraints>
                                 </tableViewCellContentView>
+                                <connections>
+                                    <outlet property="contentLabel" destination="lXg-WW-Zlu" id="TG8-E8-MGp"/>
+                                    <outlet property="dateLable" destination="fc6-oG-1g8" id="Uvv-au-a5e"/>
+                                    <outlet property="nameLable" destination="1aH-lE-VkV" id="nHn-6e-Y0B"/>
+                                    <outlet property="titleLabel" destination="n5d-FN-vUL" id="2TV-fp-4Ku"/>
+                                </connections>
                             </tableViewCell>
                         </prototypes>
                         <connections>
@@ -166,7 +197,7 @@
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="gBZ-3s-fZh" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2070" y="133"/>
+            <point key="canvasLocation" x="2069.5999999999999" y="132.68365817091455"/>
         </scene>
         <!--Compose View Controller-->
         <scene sceneID="wqB-ai-j5h">
@@ -217,7 +248,7 @@
         <!--Navigation Controller-->
         <scene sceneID="I8k-9O-N1i">
             <objects>
-                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="yj7-0L-pBt" sceneMemberID="viewController">
+                <navigationController storyboardIdentifier="ArticlesTableViewController" automaticallyAdjustsScrollViewInsets="NO" id="yj7-0L-pBt" sceneMemberID="viewController">
                     <toolbarItems/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="j1k-87-skk">
                         <rect key="frame" x="0.0" y="20" width="375" height="44"/>
